--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -5,13 +5,13 @@
             <span class="badge">{{hero.id}}</span>
             <span class="name">{{hero.name}}</span>
         </button>
+        <div *ngIf="hero === selectedHero">
+            <h2>{{selectedHero.name | uppercase }}</h2>
+            <div>id: {{selectedHero.id}}</div>
+            <div>
+                <label for="hero-name">Hero name:</label> &nbsp;
+                <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
+            </div>
+        </div>
     </li>
 </ul>
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name | uppercase }}</h2>
-    <div>id: {{selectedHero.id}}</div>
-    <div>
-        <label for="hero-name">Hero name:</label> &nbsp;
-        <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="name">
-    </div>
-</div>
